--- a/src/main/resources/templates/editGarden.html
+++ b/src/main/resources/templates/editGarden.html
@@ -9,7 +9,7 @@
             <div class="divide-x divide-gray-300">
                 <button type="button"
                         class="px-2 text-md font-medium text-gray-500 focus:outline-none bg-white hover:text-blue-400 focus:z-10 focus:ring-4 focus:ring-gray-100">
-                    <a th:href="@{/garden/add}">
+                    <a th:href="@{/garden/{idGarden}/edit(idGarden=${currentGarden.idGarden})}">
                         <i class="icon-refresh"></i>
                         <span class="mx-2">Refresh</span>
                     </a>
@@ -41,7 +41,15 @@
                                 <svg class="rtl:rotate-180 w-3 h-3 text-gray-500 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
                                 </svg>
-                                <a th:href="@{/garden/add}" class="ms-1 text-sm font-medium text-gray-500 hover:text-blue-600 md:ms-2">Add Garden</a>
+                                <a th:href="@{/garden/{idGarden}(idGarden=${currentGarden.idGarden})}" class="ms-1 text-sm font-medium text-gray-500 hover:text-blue-600 md:ms-2" th:text="${currentGarden.name}"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="flex items-center">
+                                <svg class="rtl:rotate-180 w-3 h-3 text-gray-500 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+                                </svg>
+                                <a th:href="@{/garden/{idGarden}/edit(idGarden=${currentGarden.idGarden})}" class="ms-1 text-sm font-medium text-gray-500 hover:text-blue-600 md:ms-2">Edit Garden</a>
                             </div>
                         </li>
                     </ol>
@@ -53,7 +61,7 @@
                 </div>
                 <div class="px-4 py-1 divide-y divide-gray-300">
                     <div>
-                        <form method="post" th:action="@{/garden/add}" th:object="${newGarden}">
+                        <form method="post" th:action="@{/garden/{idGarden}/edit(idGarden=${currentGarden.idGarden})}" th:object="${currentGarden}">
                             <div class="py-2">
                                 <label for="name" class="block mb-2 text-sm font-medium text-gray-500">Name</label>
                                 <input th:field="*{name}" type="text" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"  placeholder="Name..." required />
@@ -75,7 +83,7 @@
                                 <p class="text-red-500" th:errors="*{city}" th:if="${#fields.hasErrors('city')}"></p>
                             </div>
                             <div class="py-4 flex justify-end">
-                                <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add</button>
+                                <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Edit</button>
                             </div>
                         </form>
                     </div>
